# context-collector

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: context-collector.toml  llm-context-collector.toml
src/context_collector/: __init__.py  __main__.py  cli.py  collector.py  config.py  console.py  exclusions.py  formatter.py  languages.py
src/llm_context_collector/: __init__.py  __main__.py  cli.py  collector.py  config.py  console.py  formatter.py
tests/: test_cli.py  test_collector.py  test_config.py  test_exclusions.py  test_formatter.py  test_languages.py
tests/fixtures/: sample-config.toml
tests/fixtures/sample-repo/: .llm-context-collector.toml
tests/fixtures/sample-repo/src/: app.py  models.py
tests/fixtures/sample-repo/src/routes/: auth.py  users.py
tests/fixtures/sample-repo/tests/: test_app.py
