[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-collector"
version = "0.1.0"
description = "A small CLI tool to collect source files from a repository into a single Markdown document, ready to share with an LLM."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "context-collector contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
keywords = ["cli", "llm", "context", "markdown", "code-review", "developer-tools"]
dependencies = [
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "tomli>=1.1.0",
]

[project.scripts]
context-collector = "context_collector.cli:main"

[project.urls]
Homepage = "https://github.com/t11z/context-collector"
Repository = "https://github.com/t11z/context-collector"
Issues = "https://github.com/t11z/context-collector/issues"
Changelog = "https://github.com/t11z/context-collector/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.mypy]
strict = true
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
